@@ -1,3 +1,9 @@
+2006-04-17  Joost de Valk  <jdevalk@opendarwin.org>
+
+        Reviewed by ggaren.
+
+        * blog/wp-config.php: passwords and users don't belong in SVN. 
+
 2006-04-16  Joost de Valk  <jdevalk@opendarwin.org>
 
         Reviewed by Maciej.
